k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: dev
spec:
  serviceName: redis 
  securityContext:
        fsGroup: 1000
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        storageClassName: gp2 
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
