k8s/redis-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: redis
  namespace: dev
subsets:
  - addresses:
      - ip: 10.1.12.92
    ports:
      - port: 6379
