k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTP": 8080}]'   # ← two ports
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /                  # port 80 → vote
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - http:
      paths:
      - path: /                  # port 8080 → result
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
